@@ -1,6 +1,6 @@
 
 for (<*.c>) {
-    next if /^(xsinit|perlxsi)/;	
+    next if /^(xsinit|perlxsi|perl_eval_pv)/;	
     s/\.c//;
     print "building $_\n";
     system "$^X ./build $_";
