@@ -1,3 +1,13 @@
+v, 1.12, May 1, 1997  
+
+o added call_anon example
+
+o update examples to use new perl_eval_pv() function.
+
+o sync Embed.pm with perl5.003_94
+
+o fixed broken eg/regex.c spotted by Larry W. Virden
+
 v, 1.11, March 10, 1997  
 
 o extended test suite to test perl_destruct_level=1 with
